# protEncode

./: README.md  index.html?tab=allData&releasename=DepMap Public 22Q2&filename=CCLE_mutations.csv  plm_mutation_cpu.yml  pyproject.toml
protencode/: cli.py
protencode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
protencode/embeddings_generation/: attention_optimiser.py  esm2_attentionweighter.py  gpu_selector.py
protencode/sample_preparation/: esmattention_encoding.py  multimut_encoding.py  pipeline.py
protencode/sequence_preparation/: downstreamProcess.py  fastaProcessor.py  finalise_sequences.py  geneLengthFilter.py  mutationSequenceMerge.py  pipeline.py  variantProcessor.py
protencode/utils/: download_test_data.py
src/attentionWeightedPLMs/: cli.py
src/attentionWeightedPLMs/embeddings_generation/: generate_ESM2embeddings.py  process_embeddings.py
src/attentionWeightedPLMs/sample_preparation/: binary_encoding.py
src/attentionWeightedPLMs/sequence_preparation/: __init__.py  extractVarationInfo.py  mutationGenerator.py  pipeline.py  uniProtFasta.py
tests/data/: ccle_mutations_test.csv
